# arucotag-genom3

./: .gitignore  Makefile.am  README.adoc  arucotag-genom3-uninstalled.pc.in  arucotag-genom3.pc.in  arucotag.gen  camera.gen  configure.ac  image.idl
codels/: Makefile.am  arucotag_codels.cc  arucotag_detect_codels.cc  arucotag_main_codels.cc  arucotag_predict_codels.cc  codels.hpp
marker_generation/: README.md  gen_aruco.py
marker_generation/template/: model.config  model.sdf  template.material
